{
    "name": "PlayerInputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "fa352c44-9580-4b0e-b884-14f27943c2aa",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5b593c47-da39-4241-8a9c-7ec3a8b876c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "bc5f6b6f-f7df-46ec-a0af-546ed7f3dfd1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillOne",
                    "type": "Button",
                    "id": "bdb81e29-5444-4f24-a905-5f839b4f3dbc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillTwo",
                    "type": "Button",
                    "id": "9c999ba2-0db4-498f-9379-bad3de780939",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillThree",
                    "type": "Button",
                    "id": "dea0f335-f4cc-4875-a6bb-f8427ac49f54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "839a309c-06c5-4040-9855-1b49cde83968",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d60af4de-4cd2-45f1-9d0f-e1685766e936",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7280c568-043b-4192-8c6a-ae91de5b934c",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fafd5b8c-5fd2-44fc-a484-c2f73b555659",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98787a51-36d0-4615-95ab-7f2722b5b2ff",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillThree",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}